# MOPRIN

./: CMakeLists.txt
API/MOPRIN_BASE/: MOPRIN_Base_Command_Bash.h  MOPRIN_Base_TL.h  MOPRIN_Base_TL_Type.h  MOPRIN_Base_Type.h
IMPLEMENTATION/MOPRIN_BASE/: MOPRIN_BASE_TL_FORMULA.cpp  MOPRIN_BASE_TL_FORMULA.h  MOPRIN_BASE_TL_Grammar.cpp  MOPRIN_BASE_TL_Grammar.h  MOPRIN_BASE_TL_Symbol.cpp  MOPRIN_BASE_TL_Symbol.h  MOPRIN_Base_Command_BashMain_inter.h  MOPRIN_Base_Command_bash_main.cpp  MOPRIN_Base_TL_int.cpp  MOPRIN_Base_TL_int.h
TEST/: Makefile  Test_Moprin_Base_Command_Bash.cpp
