cmake_minimum_required(VERSION 3.28)
project("MOPRIN")

set(CMAKE_CXX_STANDARD 17)


set(HEADER_DIRS "API/MOPRIN_BASE")
include_directories(${HEADER_DIRS})
set(SRC_MOPRIN_BASE "IMPLEMENTATION/MOPRIN_BASE")
#MOPRIN BASE
set(LIB_MOPRIN_BASE ${SRC_MOPRIN_BASE}/MOPRIN_Base_Command_bash_main.cpp)
add_library(MOPRIN_BASE STATIC ${LIB_MOPRIN_BASE})
